--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         color: white;
       }
       @keyframes fogEffect {
-  0% {
-    background-position: 0% 0%;
-  }
-  50% {
-    background-position: 100% 100%;
-  }
-  100% {
-    background-position: 0% 0%;
-  }
-}
+        0% {
+          background-position: 0% 0%;
+        }
+        50% {
+          background-position: 100% 100%;
+        }
+        100% {
+          background-position: 0% 0%;
+        }
+      }
       .container {
         max-width: 900px;
         margin: auto;
@@ -202,6 +202,7 @@
         <h2 style="background: linear-gradient(135deg, #833ab4, #fd1d1d, #fcb045); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Socials</h2>
         <div class="links">
           <a href="https://github.com/Dev2139" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+          <a href="https://leetcode.com/u/DevPatel2139/" target="_blank"><i class="fab fa-leetcode"></i> LeetCode</a>
           <a href="https://www.linkedin.com/in/dev-patel2139/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a href="https://x.com/Dev_Patel2139" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
           <a href="https://www.instagram.com/dev_patel_2139/?hl=en" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
