--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <span>Postman</span>
           </div>
           <div class="skill-item">
-            <i class="fas fa-stripe"></i> <!-- Postman logo (you can find an icon for it) -->
+            <i class="fa-brands fa-cc-stripe"></i> <!-- Postman logo (you can find an icon for it) -->
             <span>Stripe payment integration</span>
           </div>
           <div class="skill-item">
@@ -108,8 +108,20 @@
             <span>Figma</span>
           </div>
           <div class="skill-item">
+            <i class="fab fa-python"></i> <!-- Docker Logo -->
+            <span>Python</span>
+          </div>
+          <div class="skill-item">
+            <i class="fa-solid fa-code"></i> <!-- Docker Logo -->
+            <span>MySQL</span>
+          </div>
+          <div class="skill-item">
             <i class="fab fa-windows"></i> <!-- Microsoft Logo -->
             <span>Microsoft</span>
+          </div>
+          <div class="skill-item">
+            <i class="fab fa-python"></i> <!-- Docker Logo -->
+            <span>Python</span>
           </div>
           <div class="skill-item">
             <i class="fab fa-linux"></i> <!-- Linux Logo -->
@@ -137,9 +149,9 @@
         <h2 style="background: linear-gradient(135deg, #833ab4, #fd1d1d, #fcb045); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Socials</h2>
         <div class="links">
           <a href="https://github.com/Dev2139" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-          <a href="https://leetcode.com/u/DevPatel2139/" target="_blank"><i class="fab fa-code"></i> LeetCode</a>
           <a href="https://www.linkedin.com/in/dev-patel2139/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
           <a href="https://x.com/Dev_Patel2139" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+          <a href="https://leetcode.com/u/DevPatel2139/" target="_blank"><i class="fa-solid fa-code"></i> LeetCode</a>
           <a href="https://www.instagram.com/dev_patel_2139/?hl=en" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
           <a href="https://drive.google.com/file/d/1MHA9AbofYsfZRLXfuJVbFpfRxJMpDmG7/view?usp=sharing" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
 
